--- a/Caddyfile
+++ b/Caddyfile
@@ -1,8 +1,10 @@
 :8081 {
-    # 前端静态文件
-    handle /static/* {
-        root * /usr/share/caddy
-        file_server
+    # 启用 CORS
+    header {
+        Access-Control-Allow-Origin *
+        Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+        Access-Control-Allow-Headers "Origin, Content-Type, Authorization"
+        Access-Control-Allow-Credentials true
     }
 
     # API 反向代理
@@ -10,7 +12,7 @@
         reverse_proxy backend:8080
     }
 
-    # 其他所有请求转发到前端
+    # 静态文件服务
     handle {
         root * /usr/share/caddy
         try_files {path} /index.html
