修改前端的配置

--- a/Caddyfile
+++ b/Caddyfile
@@ -7,10 +7,32 @@
         Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
         Access-Control-Allow-Headers "Origin, Content-Type, Authorization"
         Access-Control-Allow-Credentials true
+        # 添加安全相关的响应头
+        Strict-Transport-Security "max-age=31536000"
+        X-Content-Type-Options "nosniff"
+        X-Frame-Options "DENY"
+        X-XSS-Protection "1; mode=block"
+        Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data:; connect-src 'self' http://localhost:* http://127.0.0.1:*"
     }
 
-    reverse_proxy /api/* backend:8080
+    # API 反向代理
+    handle /api/* {
+        reverse_proxy backend:8080 {
+            header_up Host {upstream_hostport}
+            header_up X-Real-IP {remote_host}
+            header_up X-Forwarded-For {remote_host}
+            header_up X-Forwarded-Proto {scheme}
+        }
+    }
 
-    try_files {path} /index.html
-    file_server
+    # 静态文件服务
+    handle {
+        try_files {path} /index.html
+        file_server
+    }
+
+    log {
+        output stdout
+        format console
+    }
 }
