--- a/Caddyfile
+++ b/Caddyfile
@@ -7,12 +7,12 @@
         Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
         Access-Control-Allow-Headers "Origin, Content-Type, Authorization"
         Access-Control-Allow-Credentials true
-        # 添加安全相关的响应头
+        # 安全响应头
         Strict-Transport-Security "max-age=31536000"
         X-Content-Type-Options "nosniff"
         X-Frame-Options "DENY"
         X-XSS-Protection "1; mode=block"
-        Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data:; connect-src 'self' http://localhost:* http://127.0.0.1:*"
+        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' /api/*; font-src 'self' data:;"
     }
 
     # API 反向代理
