--- a/web/package.json
+++ b/web/package.json
@@ -17,10 +17,11 @@
     "antd": "^5.4.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "@emotion/css": "^11.11.2",
+    "@ant-design/use-emotion-css": "^1.0.4"
   },
   "devDependencies": {
-    "@ant-design/use-emotion-css": "^1.0.4",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
