--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: builder
     command: go run scripts/init_admin.go
     environment:
       - DB_HOST=db
