--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
     "@ant-design/pro-components": "^2.6.49",
+    "@tanstack/react-query": "^5.67.2",
     "antd": "^5.15.2",
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
